// test_grpc.go - Run in root directory: go run test_grpc.go
package main

import (
	"context"
	"fmt"
	"log"
	"time"
	pb "travel-platform/proto"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func main() {
	fmt.Println("ğŸ”Œ Connecting to gRPC Server...")

	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("âŒ Connection failed: %v", err)
	}
	defer conn.Close()

	fmt.Println("âœ… Connection successful!\n")

	client := pb.NewRecommendationServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
	defer cancel()

	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘          gRPC Client - Test Started           â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n")

	// ========== TEST 1: Travel Recommendations ==========
	fmt.Println("ğŸ“ TEST 1: Travel Recommendations")
	fmt.Println("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")

	recReq := &pb.RecommendationRequest{
		UserId:               1,
		PreferredDestination: "Rome, Italy",
		MaxBudget:            1500,
	}

	recResp, err := client.GetRecommendations(ctx, recReq)
	if err != nil {
		log.Fatalf("âŒ Error: %v", err)
	}

	fmt.Printf("âœ… %s\n\n", recResp.Message)

	for i, rec := range recResp.Recommendations {
		fmt.Printf("ğŸŒ %d. %s\n", i+1, rec.Destination)
		fmt.Printf("   ğŸ’° Budget: â‚¬%.0f\n", rec.EstimatedBudget)
		fmt.Printf("   â­ Score: %.0f/100\n", rec.MatchScore)
		fmt.Printf("   ğŸ“ %s\n", rec.Description)
		fmt.Printf("   ğŸŒ Best Season: %s\n", rec.BestSeason)
		fmt.Printf("   ğŸ¯ Activities:\n")
		for _, act := range rec.SuggestedActivities {
			fmt.Printf("      - %s\n", act)
		}
		fmt.Println()
	}

	// ========== TEST 2: Budget Analysis ==========
	fmt.Println("ğŸ’° TEST 2: Budget Analysis")
	fmt.Println("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")

	budgetReq := &pb.BudgetAnalysisRequest{
		TripId:      1,
		TotalBudget: 1500,
		Expenses: []*pb.Expense{
			{Category: "accommodation", Amount: 600, Currency: "EUR"},
			{Category: "food", Amount: 400, Currency: "EUR"},
			{Category: "transport", Amount: 250, Currency: "EUR"},
			{Category: "activities", Amount: 200, Currency: "EUR"},
		},
	}

	budgetResp, err := client.AnalyzeBudget(ctx, budgetReq)
	if err != nil {
		log.Fatalf("âŒ Error: %v", err)
	}

	fmt.Printf("ğŸ’µ Total Budget: â‚¬%.2f\n", budgetResp.TotalBudget)
	fmt.Printf("ğŸ’¸ Spent:        â‚¬%.2f\n", budgetResp.TotalSpent)
	fmt.Printf("ğŸ’° Remaining:    â‚¬%.2f\n\n", budgetResp.Remaining)

	fmt.Println("ğŸ“Š Category Analysis:")
	for _, cat := range budgetResp.CategoryBreakdown {
		icon := "âœ…"
		if cat.Status == "warning" {
			icon = "âš ï¸"
		} else if cat.Status == "optimal" {
			icon = "ğŸ¯"
		}
		fmt.Printf("   %s %-15s: â‚¬%-8.2f (%.1f%%)\n",
			icon, cat.Category, cat.TotalSpent, cat.Percentage)
	}

	if len(budgetResp.Warnings) > 0 {
		fmt.Println("\nâš ï¸  Warnings:")
		for _, w := range budgetResp.Warnings {
			fmt.Printf("   %s\n", w)
		}
	}

	if len(budgetResp.Suggestions) > 0 {
		fmt.Println("\nğŸ’¡ Suggestions:")
		for _, s := range budgetResp.Suggestions {
			fmt.Printf("   %s\n", s)
		}
	}

	fmt.Println("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘        âœ… Tests Completed Successfully!       â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
}
