// test_grpc.go - Ana dizinde Ã§alÄ±ÅŸtÄ±rÄ±n: go run test_grpc.go
package main

import (
	"context"
	"fmt"
	"log"
	"time"
	pb "travel-platform/proto"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

func main() {
	fmt.Println("ğŸ”Œ gRPC Server'a baÄŸlanÄ±lÄ±yor...")

	conn, err := grpc.Dial("localhost:50051", grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		log.Fatalf("âŒ BaÄŸlantÄ± baÅŸarÄ±sÄ±z: %v", err)
	}
	defer conn.Close()

	fmt.Println("âœ… BaÄŸlantÄ± baÅŸarÄ±lÄ±!\n")

	client := pb.NewRecommendationServiceClient(conn)
	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
	defer cancel()

	fmt.Println("â•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘          gRPC Client - Test BaÅŸladÄ±          â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n")

	// ========== TEST 1: Seyahat Ã–nerileri ==========
	fmt.Println("ğŸ“ TEST 1: Seyahat Ã–nerileri")
	fmt.Println("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")

	recReq := &pb.RecommendationRequest{
		UserId:               1,
		PreferredDestination: "",
		MaxBudget:            1500,
	}

	recResp, err := client.GetRecommendations(ctx, recReq)
	if err != nil {
		log.Fatalf("âŒ Hata: %v", err)
	}

	fmt.Printf("âœ… %s\n\n", recResp.Message)

	for i, rec := range recResp.Recommendations {
		fmt.Printf("ğŸŒ %d. %s\n", i+1, rec.Destination)
		fmt.Printf("   ğŸ’° BÃ¼tÃ§e: â‚¬%.0f\n", rec.EstimatedBudget)
		fmt.Printf("   â­ Puan: %.0f/100\n", rec.MatchScore)
		fmt.Printf("   ğŸ“ %s\n", rec.Description)
		fmt.Printf("   ğŸŒ En Ä°yi Sezon: %s\n", rec.BestSeason)
		fmt.Printf("   ğŸ¯ Aktiviteler:\n")
		for _, act := range rec.SuggestedActivities {
			fmt.Printf("      - %s\n", act)
		}
		fmt.Println()
	}

	// ========== TEST 2: BÃ¼tÃ§e Analizi ==========
	fmt.Println("ğŸ’° TEST 2: BÃ¼tÃ§e Analizi")
	fmt.Println("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€")

	budgetReq := &pb.BudgetAnalysisRequest{
		TripId:      1,
		TotalBudget: 1500,
		Expenses: []*pb.Expense{
			{Category: "accommodation", Amount: 600, Currency: "EUR"},
			{Category: "food", Amount: 400, Currency: "EUR"},
			{Category: "transport", Amount: 250, Currency: "EUR"},
			{Category: "activities", Amount: 200, Currency: "EUR"},
		},
	}

	budgetResp, err := client.AnalyzeBudget(ctx, budgetReq)
	if err != nil {
		log.Fatalf("âŒ Hata: %v", err)
	}

	fmt.Printf("ğŸ’µ Toplam BÃ¼tÃ§e: â‚¬%.2f\n", budgetResp.TotalBudget)
	fmt.Printf("ğŸ’¸ Harcanan:     â‚¬%.2f\n", budgetResp.TotalSpent)
	fmt.Printf("ğŸ’° Kalan:        â‚¬%.2f\n\n", budgetResp.Remaining)

	fmt.Println("ğŸ“Š Kategori Analizi:")
	for _, cat := range budgetResp.CategoryBreakdown {
		icon := "âœ…"
		if cat.Status == "warning" {
			icon = "âš ï¸"
		} else if cat.Status == "optimal" {
			icon = "ğŸ¯"
		}
		fmt.Printf("   %s %-15s: â‚¬%-8.2f (%.1f%%)\n",
			icon, cat.Category, cat.TotalSpent, cat.Percentage)
	}

	if len(budgetResp.Warnings) > 0 {
		fmt.Println("\nâš ï¸  UyarÄ±lar:")
		for _, w := range budgetResp.Warnings {
			fmt.Printf("   %s\n", w)
		}
	}

	if len(budgetResp.Suggestions) > 0 {
		fmt.Println("\nğŸ’¡ Ã–neriler:")
		for _, s := range budgetResp.Suggestions {
			fmt.Printf("   %s\n", s)
		}
	}

	fmt.Println("\nâ•”â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•—")
	fmt.Println("â•‘        âœ… Testler BaÅŸarÄ±yla TamamlandÄ±!      â•‘")
	fmt.Println("â•šâ•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•")
}
